--- a/cola-framework/cola-core/pom.xml
+++ b/cola-framework/cola-core/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.alibaba.cola</groupId>
 		<artifactId>all</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>2.0.0</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>cola-core</artifactId>
