--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,15 @@
     <groupId>com.alibaba.cola</groupId>
     <artifactId>cola-parent</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>2.0.0</version>
     <name>cola-parent</name>
+
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.2.0.RELEASE</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
 
     <properties>
         <maven.compiler.target>1.8</maven.compiler.target>
@@ -15,33 +22,50 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <mybatis-starter.version>1.3.1</mybatis-starter.version>
-        <spring-boot.version>2.1.3.RELEASE</spring-boot.version>
         <cola.framework.version>2.0.0</cola.framework.version>
     </properties>
 
     <modules>
-        <module>cola-archetype-service</module>
-        <module>cola-archetype-web</module>
+<!--        <module>cola-archetype-service</module>-->
+<!--        <module>cola-archetype-web</module>-->
         <module>cola-framework</module>
-        <module>sample/craftsman</module>
+<!--        <module>sample/craftsman</module>-->
     </modules>
 
 
+    <repositories>
+        <repository>
+            <id>nexus</id>
+            <name>CodingApi Repository</name>
+            <url>http://gr.io/repository/maven-public/</url>
+        </repository>
+    </repositories>
+
+    <distributionManagement>
+        <repository>
+            <id>Releases</id>
+            <url>http://gr.io/repository/maven-releases/</url>
+        </repository>
+    </distributionManagement>
+
+
+
     <build>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-source-plugin</artifactId>
-                    <version>3.0.1</version>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-deploy-plugin</artifactId>
-                    <configuration>
-                        <skip>true</skip>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>3.0.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
     </build>
+
 </project>
