--- a/sample/craftsman/craftsman-app/pom.xml
+++ b/sample/craftsman/craftsman-app/pom.xml
@@ -4,11 +4,11 @@
 	<parent>
 		<groupId>com.alibaba.craftsman</groupId>
 		<artifactId>craftsman.all</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>2.0.0</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>craftsman-app</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>2.0.0</version>
 	<name>craftsman-app</name>
 	<dependencies>
 		<dependency>
