--- a/sample/craftsman/pom.xml
+++ b/sample/craftsman/pom.xml
@@ -5,7 +5,7 @@
     <groupId>com.alibaba.craftsman</groupId>
     <artifactId>craftsman.all</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>2.0.0</version>
     <name>craftsman.all</name>
 
     <properties>
