--- a/sample/craftsman/start/pom.xml
+++ b/sample/craftsman/start/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.alibaba.craftsman</groupId>
         <artifactId>craftsman.all</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>2.0.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
