--- a/sample/craftsman/start/src/main/resources/application.properties
+++ b/sample/craftsman/start/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.datasource.password=1983Root_2
 #mybatis
 mybatis.config-location=classpath:mybatis-config.xml
 
+alibaba.cola.packages.list=com.alibaba.craftsman
